--- a/index.html
+++ b/index.html
@@ -4,48 +4,44 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Font Test</title>
-	
+
 	<style type="text/css">
-		@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
-		@font-face {
-		    font-family: 'Pretendard-Regular';
-		    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-		    font-weight: 400;
-		    font-style: normal;
+		@import url(https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+		@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
+		body {		
+			margin: 0;
+			padding: 0;
 		}
-
-		
 		.testdummy {
-
 			font-size: 12px;
 			line-height: 1.5;
-    		color: rgb(0, 0, 0, 1.0);
-    		word-break: keep-all;
-
-			margin: 16 100;
-    		padding: 0;
-
-    		display: flex;
-    		border: 0;
-   			outline: 0;
-
-    		vertical-align: baseline;
+			color: rgb(0, 0, 0, 1.0);
+			word-break: keep-all;
+			margin: 100px 16px;
+			padding: 0;
+			display: flex;
+			gap: 0;
 		}
 		.antialiased {
 			-webkit-font-smoothing: antialiased;
 			-moz-osx-font-smoothing: grayscale;
 		}
 		.spoqa {
-			font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+			font-family: 'Spoqa Han Sans', 'sans-serif';
+			font-weight: 400;
 		}
 		.pretendard {
-			font-family: 'Pretendard-Regular', 'sans-serif';
+			font-family: 'Pretendard', 'sans-serif';
+			font-weight: 400;
 		}
-		.testdummy * {width: 400px;}
+		.testdummy * {
+			width: 400px;
+		}
 	</style>
 </head>
 <body>
-	<div class="testdummy Spoqa antialiased">
+	<div class="testdummy spoqa antialiased">
 		<p>
 			Spoqa Han Sans Neo Regular<br>Font size 12pt<br>AntialiasOn<br>
 		</p>
@@ -53,7 +49,7 @@
 			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.<br>
 		</p>
 	</div>
-	<div class="testdummy Spoqa">
+	<div class="testdummy spoqa">
 		<p>
 			Spoqa Han Sans Neo Regular<br>Font size 12pt<br>AntialiasOff<br>
 		</p>
@@ -61,7 +57,7 @@
 			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.<br>
 		</p>
 	</div>
-	<div class="testdummy Pretendard antialiased">
+	<div class="testdummy pretendard antialiased">
 		<p>
 			Pretendard Regular<br>Font size 12pt<br>AntialiasOn<br>
 		</p>
@@ -69,9 +65,17 @@
 			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.<br>
 		</p>
 	</div>
-	<div class="testdummy Pretendard">
+	<div class="testdummy pretendard">
 		<p>
 			Pretendard Regular<br>Font size 12pt<br>AntialiasOff<br>
+		</p>
+		<p>
+			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.<br>
+		</p>
+	</div>
+	<div class="testdummy">
+		<p>
+			기본 폰트<br>Font size 12pt<br>AntialiasOff<br>
 		</p>
 		<p>
 			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.<br>
