--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Font Test</title>
+	<title>Font Test - v2</title>
 
 	<style type="text/css">
 		@import url(https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
@@ -16,7 +16,6 @@
 		}
 		.testdummy {
 			font-size: 12px;
-			line-height: 1.5;
 			color: rgb(0, 0, 0, 1.0);
 			word-break: keep-all;
 			margin: 100px 16px;
@@ -31,6 +30,10 @@
 			-webkit-font-smoothing: antialiased;
 			-moz-osx-font-smoothing: grayscale;
 		}
+
+		.lh15{ line-height:1.5em }
+		.lh18{ line-height:1.8em }
+		.lh20{ line-height:2.0em }
 
 	.title{
 		width: 200px;
@@ -56,65 +59,25 @@
 	</style>
 </head>
 <body>
-	<div class="testdummy spoqa antialiased">
+	<div class="testdummy pretendard antialiased lh15">
 		<p class="title">
-			Spoqa Han Sans Neo Regular<br>Font size 12pt<br>AntialiasOn<br>
+			Pretendard Regular<br>Font size 12pt<br>AntialiasOn<br>Line height 1.5<br>
 		</p>
 		<p>
 			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.
 		</p>
 	</div>
-	<div class="testdummy spoqa">
+	<div class="testdummy pretendard antialiased lh18">
 		<p class="title">
-			Spoqa Han Sans Neo Regular<br>Font size 12pt<br>AntialiasOff<br>
+			Pretendard Regular<br>Font size 12pt<br>AntialiasOn<br>Line height 1.8<br>
 		</p>
 		<p>
 			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.
 		</p>
 	</div>
-	<div class="testdummy pretendard antialiased">
+	<div class="testdummy pretendard antialiased lh20">
 		<p class="title">
-			Pretendard Regular<br>Font size 12pt<br>AntialiasOn<br>
-		</p>
-		<p>
-			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.
-		</p>
-	</div>
-	<div class="testdummy pretendard">
-		<p class="title">
-			Pretendard Regular<br>Font size 12pt<br>AntialiasOff<br>
-		</p>
-		<p>
-			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.
-		</p>
-	</div>
-	<div class="testdummy noto antialiased">
-		<p class="title">
-			Noto Sans Korean Regular<br>Font size 12pt<br>AntialiasOn<br>
-		</p>
-		<p>
-			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.
-		</p>
-	</div>
-	<div class="testdummy noto">
-		<p class="title">
-			Noto Sans Korean Regular<br>Font size 12pt<br>AntialiasOff<br>
-		</p>
-		<p>
-			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.
-		</p>
-	</div>
-	<div class="testdummy osNormal antialiased">
-		<p class="title">
-			OS 기본 서체<br>Font size 12pt<br>AntialiasOn<br>
-		</p>
-		<p>
-			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.
-		</p>
-	</div>
-	<div class="testdummy osNormal">
-		<p class="title">
-			OS 기본 서체<br>Font size 12pt<br>AntialiasOff<br>
+			Pretendard Regular<br>Font size 12pt<br>AntialiasOn<br>Line height 2.0<br>
 		</p>
 		<p>
 			카치온 가공된 7수 코튼 원단으로 빈티지한 컬러감이 돋보이는 오버핏 헌팅 재킷입니다. 카치온 가공은 바이오 워싱을 통해 코튼 원단의 겉면을 탈색화 시키고, 염색 원단 특유의 짙은 색감이 부드럽게 바래져 자연스러운 컬러가 돋보이는 기법입니다. 탈부착이 가능한 투웨이 카라로 다양한 무드 연출이 가능해 활용도가 높습니다. 입체 포켓과 소매 절개 디테일로 보다 구조적 실루엣이 연출되어 멋스러운 아이템입니다.
